--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ img {
     padding: 30px 0
 }
 /* Scrollbar Styling */
+
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -832,3 +833,136 @@ font-weight: 500;
     margin: 10px 0;
 }
  /* privacy page css end */
+
+ /* cookies section css start */
+
+ .wrapper {
+    position: fixed;
+    right: -100%;
+    bottom: 50px;
+    max-width: 400px;
+    width: 100%;
+    background: #fff;
+    border-radius: 8px;
+    padding: 15px 25px 22px;
+    transition: all 0.3s ease;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .wrapper.show {
+    right: 20px;
+  }
+  
+  .info {
+    margin-bottom: 15px;
+  }
+  .info p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+  }
+
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  .button {
+    width: calc(100% / 2 - 10px);
+    padding: 8px 0;
+    border: none;
+    border-radius: 4px;
+    background-color: #407d89;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  .button:hover {
+    background-color: #255b66;
+  }
+  .cookies-sec {
+    overflow: hidden;
+  }
+
+ /* cookies section css end */
+
+ /* contact section css start */
+.contact-wrap p {
+    font-size: 18px;
+    color: #000;
+    margin-bottom: 10px;
+}
+.contact-wrap p a{
+    text-decoration: underline;
+    color: #000;
+    font-weight: 500;
+}
+.contact-wrap h4 {
+    font-size: 22px;
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.form-group label {
+    display: block;
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 8px;
+}
+.form-group input, .form-group select, .form-group textarea{
+    width: 100%;
+    height: 45px;
+    padding: 0 20px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    font-size: 16px;
+}
+.form-group {
+    margin-bottom: 20px;
+}
+.form-group textarea {
+    height: 250px;
+    padding-top: 20px;
+}
+.form-group button {
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 1px solid #407d89;
+    background: #407d89;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+}
+.form-group button:hover{
+    background-color: #255b66;
+}
+.contact-wrap ul li a{
+    height: 35px;
+    width: 35px;
+    background-color: #407d89;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.25rem;
+    color: #ffffff;
+    border: 1px solid #407d89;
+    transition: all 0.3s linear;
+}
+.contact-wrap ul li a:hover{
+    background-color: transparent;
+    color: #407d89;
+}
+.contact-wrap ul {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+/* .contact-main{
+    background-image: url(../images/contact-bg.jpg);
+    background-position: center;
+    background-blend-mode: color-burn;
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+ /* contact section css end */
